--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <div class="intro--options">
                 <a href="#0">
                   <h3>About Me</h3>
-                  <p>I'm Basa Saiteja <br>AWS Certified Solutions Architect. </p>
+                  <p>I'm Basa Saiteja <br>Fun loving person<br>My Super Power: Can adopt any Technology easily.<br>Skills:To know my skills go to #2<br>Life goal: make a difference in the world.(Currently I dont no how to do it but I will figure out)</p>
                 </a>
                 <a href="http://talenttadka.com" target="_blank">
                   <h3>My WebSite</h3>
