--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
               <div class="intro--options">
                 <a href="#0">
                   <h3>About Me</h3>
-                  <p>I'm Basa Saiteja <br>Fun loving person<br>My Super Power: Can adopt any Technology easily.<br>Skills:To know my skills go to #2<br>Life goal: make a difference in the world.(Currently I dont no how to do it but I will figure out)</p>
+                  <p>I'm Basa Saiteja <br>Fun loving person<br>My Super Power: Can adopt any Technology easily.<br></p>
                 </a>
-                <a href="http://talenttadka.com" target="_blank">
+                <a href="https://saitejabasa.github.io/MyProfile/" target="_blank">
                   <h3>My WebSite</h3>
-                  <p>TalentTadka.com <br>"What really turned me over was the ability to understand how everything works without any prior knowledge."</p>
+                  <p>saitejabasa.github.io<br>"What really turned me over was the ability to understand how everything works without any prior knowledge."</p>
                 </a>
                 <!--just for looking good-->
                <a href="#0">
